--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
         <title>Odin Recipies</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
+        <h1 class="title">Odin Recipes</h1>
+        <div class="content">
+            <ul>
             <li><a href="./recipes/quick-beef-stir-fry.html">Quick Beef Stir Fry</a></li>
             <li><a href="./recipes/miso-soup.html">Miso Soup</a></li>
             <li><a href="./recipes/microwave-mochi.html">Microwave Mochi</a></li>
-        </ul>
+            </ul>
+        </div>
     </body>
 </html>
